<resources>
    <string name="app_name">MyAppThirdMonth</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="choose_picture_text">Выберите изображение из галереи, чтобы продолжить создание аккаунта.</string>
    <string name="choose_picture_button">Выбрать изображение</string>
    <string name="continue_btn">Продолжить</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
</resources>