<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/container_gradient_background"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="start"
        android:background="@drawable/edit_text_shape"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="240dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/user_name"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="start"
        android:background="@drawable/edit_text_shape"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        android:textSize="28sp"
        android:id="@+id/btnContinue2"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#53B36E"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>